initial commit for angular intro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,10 +35,11 @@
   }
 
   .toolbar {
-    position: absolute;
+    /* position: absolute;
     top: 0;
     left: 0;
-    right: 0;
+    right: 0; */
+    margin-top: 3em;
     height: 60px;
     display: flex;
     align-items: center;
@@ -341,7 +342,7 @@
       </g>
     </svg>
 
-    <span>{{ title }} app is running!</span>
+    <span>{{ title }}</span>
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
       <title>Rocket Ship Smoke</title>
