--- a/src/app/todos/todos.component.css
+++ b/src/app/todos/todos.component.css
@@ -3,4 +3,10 @@
 }
 .title {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.newTodoLabel {
+    font-size: 0.75rem;
+    color: gray;
 }
